objects/npe03__Recurring_Donation__c.object
<CustomObject>
    <description>Recurring Donations with no end date.</description>
    <fields>
        <fullName>IATS_recurring__IATS_Address__c</fullName>
        <label>IATS - Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATS_recurring__IATS_City__c</fullName>
        <label>IATS - City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATS_recurring__IATS_Country__c</fullName>
        <label>IATS - Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATS_recurring__IATS_Email__c</fullName>
        <label>IATS - Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>IATS_recurring__IATS_Fax__c</fullName>
        <label>IATS - Fax</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATS_recurring__IATS_First_Name__c</fullName>
        <label>IATS - First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATS_recurring__IATS_Item_1__c</fullName>
        <label>IATS - Item 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATS_recurring__IATS_Item_2__c</fullName>
        <label>IATS - Item 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATS_recurring__IATS_Item_3__c</fullName>
        <label>IATS - Item 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATS_recurring__IATS_Last_Name__c</fullName>
        <label>IATS - Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATS_recurring__IATS_Phone1__c</fullName>
        <label>IATS - Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>IATS_recurring__IATS_Phone2__c</fullName>
        <label>IATS - Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>IATS_recurring__IATS_State__c</fullName>
        <label>IATS - State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATS_recurring__IATS_Zip_Code__c</fullName>
        <label>IATS - Zip Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npe03__Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npe03__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>R00N80000002bOmREAU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npe03__Date_Established__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Date Established</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npe03__Donor_Name__c</fullName>
        <formula>if(
  LEN(npe03__Contact__c)&gt;0,
  npe03__Contact__r.FirstName  &amp; &quot; &quot; &amp; npe03__Contact__r.LastName,
   npe03__Organization__r.Name
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Donor Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npe03__Installment_Amount__c</fullName>
        <formula>IF( 

OR(
(text(npe03__Schedule_Type__c)=$Label.npe03__RecurringDonationMultiplyValue), 
(text(npe03__Open_Ended_Status__c)=$Label.npe03__RecurringDonationOpenStatus)
) 
, npe03__Amount__c , IF(npe03__Installments__c&gt;0,npe03__Amount__c / npe03__Installments__c,0)




)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Installment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npe03__Installment_Period__c</fullName>
        <description>How often you’ll receive the donations. NOTE: Changing the installment period for an existing Fixed-Length Recurring Donation may result in the loss and re-creation of open opportunities. Any data associated with those opportunities may be lost.</description>
        <inlineHelpText>Sets the installment period for your recurring donations.  WARNING: Changing the Installment Period for an existing open-ended Recurring Donation can cause open Opportunities to be deleted and recreated. Any associated data may not be retained.</inlineHelpText>
        <label>Installment Period</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>1st and 15th</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npe03__Installments__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Number of installments (donations) you expect to receive. For Fixed-Length Recurring Donations only.</description>
        <inlineHelpText>Number of installments.  Only used with Non-Open Ended Recurring Donations.</inlineHelpText>
        <label>Installments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npe03__Last_Payment_Date__c</fullName>
        <description>Date of the last payment for this Recurring Donation</description>
        <inlineHelpText>Date of the last payment for this Recurring Donation</inlineHelpText>
        <label>Last Donation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npe03__Next_Payment_Date__c</fullName>
        <description>Holds the date of the next recurring payment.  Manually editing this field will recalculate all future opportunity&apos;s close dates based on the scheduled defined.</description>
        <inlineHelpText>Holds the date of the next recurring payment.  Manually editing this field will recalculate all future opportunity&apos;s close dates based on the scheduled defined.</inlineHelpText>
        <label>Next Donation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npe03__Open_Ended_Status__c</fullName>
        <label>Open Ended Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npe03__Organization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>RecurringDonations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npe03__Paid_Amount__c</fullName>
        <description>Total Amount paid on this Recurring Donation</description>
        <inlineHelpText>Total Amount paid on this Recurring Donation</inlineHelpText>
        <label>Paid Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npe03__Recurring_Donation_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipName>Recurring_Donations_Pledges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npe03__Schedule_Type__c</fullName>
        <description>Tells Salesforce how to compute the amount for each child opportunity, based on what you&apos;ve entered in the Amount field. For Fixed-Length Recurring Donations only.</description>
        <inlineHelpText>Whether the Amount is used for each installment (Multiple By), or Amount is split between installments (Divide By).  Only used with Non-Open Ended Recurring Donations.</inlineHelpText>
        <label>Schedule Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Multiply By</fullName>
                </value>
                <value>
                    <fullName>Divide By</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npe03__Total_Paid_Installments__c</fullName>
        <description>Total number of installments paid on this Recurring Donation.</description>
        <inlineHelpText>Total number of installments paid on this open-ended recurring donation.</inlineHelpText>
        <label>Total Paid Installments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npe03__Total__c</fullName>
        <formula>IF(TEXT( npe03__Open_Ended_Status__c) =  $Label.npe03__RecurringDonationOpenStatus, 0,
CASE(
 npe03__Schedule_Type__c ,
&quot;Multiply By&quot;, npe03__Installments__c * npe03__Amount__c ,
&quot;Divide By&quot;,npe03__Amount__c
,0
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npsp__Always_Use_Last_Day_Of_Month__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, all future monthly or quarterly donation installments will be set to the last day of the month, regardless of the actual date in the &quot;Next Donation Date&quot; field. This is ignored when the installment period is not set to Monthly or Quarterly.</inlineHelpText>
        <label>Always use last day of month</label>
        <type>Checkbox</type>
    </fields>
    <label>Recurring Donations</label>
    <nameField>
        <label>Recurring Donation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recurring Donations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>